--- a/public/css/src/friends/friends.css
+++ b/public/css/src/friends/friends.css
@@ -28,7 +28,7 @@
 
 .friends .--invite-friends .row-pic {
     font-size: 50px;
-    background: #7b4cbb;
+    background: #1b69ec;
     border-radius: 100px;
     color: white;
 }
