--- a/public/css/src/menu/menu.css
+++ b/public/css/src/menu/menu.css
@@ -1,195 +1,249 @@
-
-
 .app-section.--menu {
-	flex-flow: row wrap;
-	justify-content: center;
-	position: relative;
-	padding-top: 140px;
-	/* transition: padding linear .6s; */
+    flex-flow: row wrap;
+    justify-content: center;
+    position: relative;
+    padding-top: 140px;
+    /* transition: padding linear .6s; */
 }
 
 .app-section.--menu.--downsized {
+    padding-top: 70px;
 }
 
 .menu {
-	display: flex;
-	position: absolute;
-	width: 100%;
-	flex-flow: row nowrap;
-	height: 100px;
-	margin-bottom: 60px;
-	align-items: flex-end;
-	justify-content: center;
-	padding-bottom: 20px;
-	background: rgba(255, 255, 255, 0.67);
-	border-bottom: 1px solid #33AFFF;
-	left: 0;
-	top: 40px;
-	z-index: 100;
-	border: none;
-	border-bottom: 1px solid rgba(51, 175, 255, 0);
-} 
-
-.menu__line {
-	left: 50%;
-	width: 64%;
-	transform: translate(-50%,0);
-	margin: 0 auto;
-	height: 1px;
-	position: absolute;
-	z-index: 0;
-	top: 119px;
+    display: flex;
+    position: absolute;
+    width: 100%;
+    flex-flow: row nowrap;
+    height: 100px;
+    margin-bottom: 60px;
+    align-items: flex-end;
+    justify-content: center;
+    padding-bottom: 20px;
+    background: rgba(255, 255, 255, 0.67);
+    border-bottom: 1px solid #33AFFF;
+    left: 0;
+    top: 40px;
+    z-index: 100;
+    border: none;
+    border-bottom: 1px solid rgba(51, 175, 255, 0);
 }
 
-.menu-section {display: none;flex-flow: column nowrap;justify-content: flex-start;align-items: center;height: 100%;width: 80%;margin-bottom: 50px;padding-top: 80px;}
+.menu__line {
+    left: 50%;
+    width: 64%;
+    transform: translate(-50%, 0);
+    margin: 0 auto;
+    height: 1px;
+    position: absolute;
+    z-index: 0;
+    top: 119px;
+}
+
+.menu-section {
+    display: none;
+    flex-flow: column nowrap;
+    justify-content: flex-start;
+    align-items: center;
+    height: 100%;
+    width: 80%;
+    margin-bottom: 50px;
+    padding-top: 30px;
+}
 
 .menu-item {
-	display: flex;
-	position: relative;
-	flex-flow: column nowrap;
-	margin: 0 10px;
-	cursor: pointer;
-	position: relative;
-	width: 130px;
-	z-index: 1;
+    display: flex;
+    position: relative;
+    flex-flow: column nowrap;
+    margin: 0 10px;
+    cursor: pointer;
+    position: relative;
+    width: 130px;
+    z-index: 1;
 }
 
 .menu-item__icon {
-	display: flex;
-	font-size: 44px;
-	width: 90px;
-	height: 90px;
-	border-radius: 100px;
-	box-sizing: border-box;
-	background: white;
-	margin-bottom: 10px;
-	color: #454545;
-	color: #1b69ec;
-	background: white;
-	border: 2px solid #1b69ec;
-	/* border: 2px solid rgba(51, 175, 255, 0.29); */
-	/* color: rgba(51, 175, 255, 0.29); */
+    display: flex;
+    font-size: 38px;
+    width: 90px;
+    height: 90px;
+    border-radius: 100px;
+    box-sizing: border-box;
+    background: white;
+    margin-bottom: 10px;
+    color: #454545;
+    background: white;
+    /* border: 1px solid #454545; */
 }
-.menu-item.--active {
-}
+
+.menu-item.--active {}
+
 .menu-item.--active h3 {}
+
 .menu-item.--active .menu-item__bar {
-	display: block;
+    display: block;
 }
+
 .menu-item__body {
-	display: flex;
-	flex-flow: column  nowrap;
-	justify-content: center;
-	align-items: center;
-	color: #454545;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: center;
+    color: #454545;
 }
+
 .menu-item.--active .menu-item__body {
-	font-weight: bolder;
+    font-weight: bolder;
 }
 
 .menu-item.--active .menu-item__icon {
-	background: #33afff;
-	/* background: #DE3653; */
-	border: 2px solid;
-	color: white;
-	background: #1b69ec;
+    /* border: 2px solid; */
+    color: #1b69ec;
+    /* background: #1b69ec; */
+    /* border: 1px solid #1b69ec; */
 }
 
 .menu-item__body i {
-	margin: auto;
+    margin: auto;
 }
 
 .menu-item__body h3 {
-	font-weight: 400;
-	margin: 0px;
-	font-size: 14px;
-	display: none;
+    font-weight: 400;
+    margin: 0px;
+    font-size: 14px;
+    display: none;
 }
 
 .menu-item__bar {
-	display: none;
-	height: 6px;
-	width: 104%;
-	margin: auto;
-	bottom: -23px;
-	border-radius: 20px;
-	left: 0px;
-	background: #1b69ec;
-	position: absolute;
+    display: none;
+    height: 4px;
+    width: 104%;
+    margin: auto;
+    bottom: -23px;
+    border-radius: 20px;
+    left: 0px;
+    background: #1b69ec;
+    position: absolute;
 }
 
 .menu-section__subtitle {
-  display: flex;
-  flex-flow: row nowrap;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  margin-bottom: 30px;
-  margin-top: 40px;
-  display: none;
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    margin-bottom: 30px;
+    margin-top: 40px;
+    display: none;
 }
 
-
 .menu-section__subtitle h3 {
-  font-family: 'creamy';
-  font-size: 50px;
-  margin: 0 30px;
-  color: #454545;
+    font-family: 'creamy';
+    font-size: 50px;
+    margin: 0 30px;
+    color: #454545;
 }
 
 .menu__loader {
-	width: 90px;
+    width: 70px;
 }
 
-.menu-section-segment {width: 40%;margin: 30px 0 50px 0;}
+.menu-section-segment {
+    width: 40%;
+    margin: 30px 0 50px 0;
+}
 
-.segment {display: flex;justify-content: center;width: 100%;height: 34px;font-size: 16px;border-radius: 20px;border: 1px solid;box-sizing: border-box;}
+.segment {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 34px;
+    font-size: 16px;
+    border-radius: 20px;
+    border: 1px solid #1b69ec;
+    box-sizing: border-box;
+}
 
-.segment__part {display: flex;height: 100%;width: 100%;cursor: pointer;transition: all ease-in-out .15s;}
+.segment__part {
+    display: flex;
+    height: 100%;
+    width: 100%;
+    cursor: pointer;
+    transition: all ease-in-out .15s;
+}
 
 .segment__part.--active {
-	background: #454545;
-	color: white;
-	border-radius: 20px!important;
-	width: 110%;
+    background: #1b69ec;
+    color: white;
+    border-radius: 20px!important;
+    width: 110%;
 }
-.segment__part:not(.--active):hover {
-}
-.segment__part:nth-of-type(1){
-	border-right: none;
-	border-radius: 20px 0 0 20px;
-}
-.segment__part:nth-of-type(2){
-	border-left: none;
-	border-radius: 0 20px 20px 0;
-}
-.segment__part h3 {margin: auto;}
 
+.segment__part:not(.--active):hover {}
 
-.menu.--downsized {height: 50px;padding-bottom: 0px;background: white;box-shadow: 0 0 10px #ADADAD;align-items: center;border-bottom: none;position: fixed;top: 58px;}
+.segment__part:nth-of-type(1) {
+    border-right: none;
+    border-radius: 20px 0 0 20px;
+}
+
+.segment__part:nth-of-type(2) {
+    border-left: none;
+    border-radius: 0 20px 20px 0;
+}
+
+.segment__part h3 {
+    margin: auto;
+}
+
+.menu.--downsized {
+    height: 50px;
+    padding-bottom: 0px;
+    background: white;
+    box-shadow: 0 0 10px #ADADAD;
+    align-items: center;
+    border-bottom: none;
+    position: fixed;
+    top: 58px;
+    margin-bottom: 0;
+}
 
 .menu.--downsized .menu-item__body {
-	flex-flow: row;
+    flex-flow: row;
 }
-.menu.--downsized .menu-item__icon{
-	width: 24px;
-	height:24px;
-	font-size: 14px;
-	margin: 0 6px;
+
+.menu.--downsized .menu-item__icon {
+    width: 24px;
+    height: 24px;
+    font-size: 14px;
+    margin: 0 6px;
 }
+
 .menu.--downsized .menu-item__bar {
-	width: 82%;
-	margin-left: 20px;
-	top: 25px;
+    width: 82%;
+    margin-left: 20px;
+    top: 25px;
 }
 
 .menu.--downsized h3 {
-	display: block;
+    display: block;
+}
+
+.row-pic__filterlay {
+	position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: .0;
+    transition: all ease-in-out .2s;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 @media (max-width: 1000px) {
-	.menu.--downsized .menu-item__bar { 
-		width: 100%;
-		margin-left: 0;
-	}
+    .menu.--downsized .menu-item__bar {
+        width: 100%;
+        margin-left: 0;
+    }
 }
