--- a/public/css/src/notifications/notifications.css
+++ b/public/css/src/notifications/notifications.css
@@ -11,7 +11,7 @@
     position: fixed;
     background: white;
     color: #191919;
-    top: 54px;
+    top: 59px;
     box-shadow: 0px 2px 10px #B3B3B3;
     left: 50%;
     transform: translate(-50%, 0);
@@ -25,6 +25,7 @@
 
 .notifications-panel__wrapper {
     height: 276px;
+    outline: none;
 }
 
 .notification {
@@ -39,13 +40,10 @@
     box-sizing: border-box;
     padding: 0 16px 0 8px;
     border-radius: 4px;
-}
-
-.notification-click {
     cursor: pointer;
 }
 
-.notification-click:hover {
+.notification:hover {
     opacity: 1;
     background: #fbfbfb;
 }
@@ -83,76 +81,65 @@
     display: none;
 }
 
-.notification__icon {
-    font-size: 18px;
-    color: white;
-    background: #33afff;
-    height: 40px;
-    width: 40px;
-    font-size: 22px;
-}
 
 /*
-Mushia 		: #db4760
+Mushia      : #db4760
 Gentle blue : #33afff
-Royal blue 	: #1b69ec
-Odébo 		: #fd7124
-Blue boy 	: #3fb3c6
-Pinkirl 	: #d55d8c
+Royal blue  : #1b69ec
+Odébo       : #fd7124
+Blue boy    : #3fb3c6
+Pinkirl     : #d55d8c
 Purple pill : #7b4cbb
-Greenected 	: #6ae74f
-Validateen 	: #6fe27e
-Whispereen 	: #58c170
+Greenected  : #6ae74f
+Validateen  : #6fe27e
+Whispereen  : #58c170
 */
 
-[data-notification-id="marked_as_host"] .notification__icon {
-    background: #33afff;
+[data-type="marked_as_host"] .notification__icon {
+    color: #3fb3c6;
 }
 
-[data-notification-id="no_friends"] .notification__icon {
-    background: #7b4cbb;
+
+[data-type="accepted_in_hosts"] .notification__icon {
+    color: #1b69ec;
 }
 
-[data-notification-id="unread_messages"] .notification__icon {
-    background: #33afff;
+[data-type="accepted_in_members"] .notification__icon {
+    color: #1b69ec;
 }
 
-[data-notification-id="check_email"] .notification__icon {
-    background: #db4760;
+[data-type="before_canceled"] .notification__icon {
+    color: #919191;
 }
 
-[data-notification-id="accepted_in"] .notification__icon {
-    background: #6fe27e;
+[data-type="group_request_hosts"] .notification__icon {
+    color: #1b69ec;
+    font-size: 30px;
 }
 
-[data-notification-id="group_request"] .notification__icon {
-    background: #fd7124;
+[data-type="group_request_members"] .notification__icon {
+    color: #1b69ec;
 }
 
-[data-notification-id="inscription_success"] .notification__icon {
-    background: #1b69ec;
+[data-type="inscription_success"] .notification__icon {
+    color: red;
 }
 
-[data-notification-id="fill_profile"] .notification__icon {
-    background: #db4760;
+[data-type="new_friends"] .notification__icon {
+    color: #7b4cbb;
 }
 
-[data-notification-id="new_friends"] .notification__icon {
-    background: #7b4cbb;
+[data-type="group_request_members"] .notification__icon {
+    color: #1b69ec;
+    font-size: 30px;
 }
+
 
 
 .notification__icon i {
     margin: auto;
 }
 
-.notification__date {
-    color: #1B69EC;
-    font-size: 11px;
-    margin-left: auto;
-    font-weight: bolder;
-    font-family: 'Open sans';
-}
 
 .notification-message {
     display: flex;
@@ -162,14 +149,50 @@ Whispereen 	: #58c170
     margin-left: 20px;
 }
 
-.notification-message__text {
-    font-weight: bolder;
+.notification .notification-message__text {
 }
 
-.notification-message__subtext {
+.notification .notification-message__subtext {
     font-size: 10px;
     margin-top: 4px;
     font-family: 'Open sans';
+    color: #919191;
+}
+
+.notification .notification__date {
+    font-size: 11px;
+    margin-left: auto;
+    font-family: 'Open sans';
+    color: #919191;
+}
+
+.notification .notification__icon {
+    font-size: 18px;
+    background: none;
+    height: 40px;
+    width: 40px;
+    font-size: 22px;
+}
+
+.notification.--seen .notification-message__text {color: #454545;}
+
+.notification.--seen .notification-message__subtext {
+   
+}
+.notification.--seen .notification__date { 
+}
+.notification.--seen .notification__icon {
+    color: #919191;
+}
+
+.notification.--clicked .notification-message__text {color: #919191;}
+
+.notification.--clicked .notification-message__subtext {
+    color: #ccc;
+}
+.notification.--clicked .notification__date {color: #ccc;}
+.notification.--clicked .notification__icon {
+    color: #ccc;
 }
 
 .notification-message__group-name {
@@ -184,8 +207,6 @@ Whispereen 	: #58c170
     background: #3D3D3D;
     border-radius: 3px
 }
-
-.--new .notification__icon {}
 
 .notifications-panel .jspPane {
     padding: 0!important;
@@ -202,21 +223,6 @@ Whispereen 	: #58c170
     background: #E4E4E4;
     right: -2px;
     width: 9px;
-}
-
-.notification:not(.--new) {
-	color: #919191;
-}
-.notification:not(.--new) .notification__icon {
-	background: #eee;
-	color: #ccc;
-}
-.notification:not(.--new) .notification__date {
-	color: #ccc;
-	font-weight: normal;
-}
-.notification:not(.--new) .notification-message__text {
-	font-weight: normal;
 }
 
 
