--- a/public/css/src/app/app_header.css
+++ b/public/css/src/app/app_header.css
@@ -14,6 +14,7 @@
     width: 100%;
     top: 54px;
     background: #33AFFF;
+    background: #1b69ec;
     height: 5px;
     /* display: none; */
 }
