--- a/public/css/src/before/before.css
+++ b/public/css/src/before/before.css
@@ -68,7 +68,7 @@
     margin: 0 20px;
     color: #ccc;
     cursor: pointer;
-    font-size: 14px;
+    font-size: 11px;
     align-items: center;
     display: inline-flex;
     transition: all ease-in-out .15s;
@@ -81,9 +81,7 @@
 }
 
 .be-dates__date span {
-    font-family: 'Open sans';
     margin-left: 4px;
-    font-size: 12px;
 }
 
 .be-dates__date.--active {
@@ -91,6 +89,7 @@
     position: relative;
     color: black;
     /* transform: scale(1.3); */
+    font-size: 13px;
 }
 
 .be-dates__date.--active span {
@@ -217,7 +216,7 @@
     padding: 0px 40px;
 }
 .be-inview-address__address {
-    font-size: 12px;
+    font-size: 11px;
     font-family: 'Open sans';
     margin-top: 6px;
     white-space: nowrap;
@@ -292,9 +291,10 @@
 .user-row__about {
     display: flex;
     align-items: center;
+    position: relative;
 }
 .user-name {
-    font-size: 18px;
+    font-size: 14px;
     font-weight: 600;
     margin-left: 4px;
     color: #333;
@@ -304,10 +304,10 @@
     font-size: 16px;
 }
 .user-row__education-label {
-    font-size: 14px;
+    font-size: 11px;
     font-weight: 400;
 }
-.user-age {font-family: 'Open sans';font-size: 14px;}
+.user-age {font-size: 14px;}
 .user-host-icon {
     color: #FD7124;
     display: none;
@@ -319,7 +319,7 @@
     display: flex;
     align-items: center;
     margin-top: 4px;
-    color: #919191;
+    color: #454545;
 }
 .user-row__education-icon {}
 .user-row__education-icon i {}
@@ -369,7 +369,7 @@
     text-align: center;
     padding: 16px 0px;
     font-weight: 500;
-    font-size: 14px;
+    font-size: 12px;
 }
 .be-ended span {
 
