--- a/public/css/src/search/search.css
+++ b/public/css/src/search/search.css
@@ -212,6 +212,10 @@
 
 .search-user__h2 {
     width: 100%;
+    font-weight: 400;
+    color: #919191;
+    font-size: 10px;
+    margin-top: 6px;
 }
 
 .search-user__h2 .comma {
@@ -223,10 +227,6 @@
 
 .search-user__h2 .age,
 .search-user__h2 .location  {
-    font-family: 'Open sans';
-    font-weight: 100;
-    color: #919191;
-    font-size: 10px;
 }
 .search-user__h2 .age {
 }
@@ -322,6 +322,7 @@
 
 .search-filters-body {
     overflow-y: scroll;
+    font-size: 12px;
 }
 
 @media (min-width: 736px) {
