--- a/views/index-dev.html
+++ b/views/index-dev.html
@@ -23,6 +23,7 @@
   <link rel="stylesheet" href="/fonts/creamy/creamy.css">
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800,300' rel='stylesheet' type='text/css'>
   <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans:400,100,300,700,800" rel="stylesheet" type="text/css">
+  <link href='https://fonts.googleapis.com/css?family=Assistant:200,300,400,600,700,800' rel='stylesheet' type='text/css'>
   
   <!-- Librairies -->
   <!-- build:css -->
